--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ece26.github.io",
-  "homepage": "ece26.github.io", 
+  "homepage": "https://ece26.github.io", 
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "deploy":"gh-pages -b master -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
